--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy Streamlit App
 on:
   push:
     branches:
-      - main  # Triggers deployment when code is pushed to main branch
+      - main  # Triggers deployment when code is pushed to the main branch
 
 jobs:
   deploy:
@@ -21,6 +21,11 @@ jobs:
       - name: Install dependencies
         run: |
           pip install -r requirements.txt
+
+      - name: Set environment variables
+        run: |
+          echo "OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}" >> $GITHUB_ENV
+        # Repeat for other environment variables if needed
 
       - name: Notify Streamlit Cloud
         run: |
